# python-meraki

./: .gitignore  README.md  architecture.md  config.json  config_loader.py  config_resolver.py  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml
backend/: interface.py  local_yaml_backend.py  router.py
config/: base.json  defaults.yaml  devices.json  exclusion_rules.yaml  fixed_ip_assignments.yaml  manifest.yaml  static_routes.json  vlans.json
config/common/: exclusion_rules.yaml  firewall.json  firewall.yaml  vlans.yaml
config/common/firewall/: mx_firewall.yaml
config/common/network_wide/: users.yaml
config/common/ports/: mx_ports.json  mx_ports.yaml
config/common/routes/: mx_static.yaml
config/common/switching/: access_policies.yaml  acl.yaml  port_profiles.yaml  port_schedules.yaml  routing_dhcp.yaml  staged_upgrades.yaml  switch_ports.yaml  switch_settings.yaml
config/common/vlans/: mx_vlans.yaml
config/devices/: devices.yaml
docs/: architecture.md  notes.txt  project_overrides.md
ipam/: allocator.py
meraki_sdk/: __init__.py  auth.py  basic_network.py  device.py  devices.py  logging_config.py  network.py  org.py
meraki_sdk/devices/: __init__.py  mx.py  mx_ports.py  mx_vlans.py  setup_devices.py
meraki_sdk/logging/: intended_state.py  summary.py
meraki_sdk/network/: __init__.py  firewall.py  setup_network.py
meraki_sdk/network_constructs/: __init__.py  setup_network_constructs.py
tests/vlans/: test_exclusions.py
utils/logging/: config.py  summary.py
utils/state/: config.py  runtime.py
(+35 files in other folders)
